Make A-B root tests package-private